web/static/static/bundle.css
/* ... */
/* view/button-image.css */
@layer components {
  .v-button-image-edit {
    height: 32px;
    border-radius: 0.1875rem;
    overflow: clip;
    position: relative;
  }
  .v-button-image-edit-overlay {
    position: absolute;
    inset: 0;
    background: oklch(0 0 0 / 0.5);
    pointer-events: none;
    visibility: hidden;
    display: grid;
    place-items: center;
  }
  .v-button-image-edit:hover .v-button-image-edit-overlay {
    visibility: visible;
  }
  .v-button-image-edit button {
    display: block;
  }
}

/* view/degraded.css */
@layer components {
  .v-degraded {
    max-width: 42rem;
    margin-inline: auto;
    padding: 2rem;
  }
  .v-degraded-alert {
    border: 2px solid var(--border-strong);
  }
}

/* view/home.css */
@layer components {
  .v-home-toolbar {
    padding-block: 1rem;
  }
  .v-home[data-home-mode-value=movie] .v-poster-grid-poster[data-kind=series] {
    display: none;
  }
  .v-home[data-home-mode-value=series] .v-poster-grid-poster[data-kind=movie] {
    display: none;
  }
  .v-home[data-home-mode-value=movie] .v-home-collections {
    display: none;
  }
  .v-home[data-home-mode-value=series] .v-home-collections {
    display: none;
  }
  [data-search-hidden] {
    display: none;
  }
  .v-home-no-results {
    display: none;
    padding: 4rem;
    background-color: oklch(0 0 0 / 0.2);
    border-radius: var(--radius-4);
    text-align: center;
    color: var(--text-3);
  }
  .v-home-no-results[data-visible] {
    display: block;
  }
  .v-home-search {
    position: relative;
    display: flex;
    width: 100%;
    min-width: 0;
  }
  .v-home-search > svg {
    position: absolute;
    left: 0.625rem;
    top: 50%;
    transform: translateY(-50%);
    color: var(--text-3);
    width: 16px;
    height: 16px;
    pointer-events: none;
  }
  .v-home-search-input {
    width: 100%;
    height: 32px;
    border: 0.5px solid var(--border-strong);
    background-color: oklch(from var(--bg-input) l c h / 0.2);
    color: var(--text);
    font-size: 14px;
    padding-inline: 2rem 1rem;
    border-radius: 9999px;
    outline: none;
    outline-offset: -1px;
    text-overflow: ellipsis;
  }
  .v-home-search-input:focus {
    outline: 1px solid var(--accent);
  }
}

/* view/media-detail.css */
@layer components {
  .v-detail {
    padding-top: 4rem;
  }
  .v-detail-info {
    gap: 1rem;
  }
  .v-detail-muted {
    color: var(--text-2);
  }
  .v-detail-play {
    width: 168px;
  }
}

/* view/media-series.css */
@layer components {
  .v-series {
    padding-top: 2.5rem;
  }
  .v-series-sidebar {
    grid-column: span 3;
  }
  .v-series-sidebar-inner {
    position: sticky;
    top: calc(var(--nav-h) + 1rem);
  }
  .v-series-sidebar-section {
    padding: 0 0.5rem;
  }
  .v-series-content {
    grid-column: span 8 / -1;
    padding-bottom: 30lvh;
  }
  .v-series-episodes {
    gap: 3rem;
    padding-block: 0.5rem;
  }
  .v-series-season {
    margin-top: calc(-1 * (var(--nav-h) + 1rem));
    padding-top: calc(var(--nav-h) + 1rem);
  }
  .v-series-season-header {
    padding-block: 1rem 2rem;
    color: var(--text-2);
    font-size: var(--text-xl);
    border-top: 2px solid var(--text-2);
  }
  .v-series-episode {
    color: var(--text-2);
  }
  .v-series[data-series-mode-value=regular] .v-series-episode[data-type=special] {
    display: none;
  }
  .v-series[data-series-mode-value=special] .v-series-episode[data-type=regular] {
    display: none;
  }
  .v-series-episode-info {
    grid-column: span 5;
    gap: 0.5rem;
  }
  .v-series-episode-header {
    align-items: center;
    gap: 1rem;
  }
  .v-series-episode-number {
    color: var(--text-3);
    text-decoration-color: var(--text-3) !important;
  }
  .v-series-episode-title {
    font-weight: 600;
  }
  .v-series-episode-summary {
    position: relative;
  }
  .v-series-spoiler-overlay {
    position: absolute;
    inset: -0.5rem;
    pointer-events: none;
  }
  .v-series-episode[data-spoiler] .v-series-episode-summary > .v-series-spoiler-overlay {
    backdrop-filter: blur(4px);
  }
  .v-series-episode[data-spoiler] .v-series-episode-thumb > .v-series-spoiler-overlay {
    backdrop-filter: blur(12px);
  }
  .v-series-episode-thumb {
    grid-column: span 3;
    aspect-ratio: 16 / 9;
    background-color: var(--bg-solid);
    border-radius: var(--radius-1);
    overflow: hidden;
  }
  .v-series-episode-thumb img {
    height: 100%;
  }
  .v-series-episode-progress {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
  }
}
/* ... */

